[Fuchsia] Move chromium to AudioOut interface

AudioRenderer interface is being replaced with AudioOut. Updated
//media and //chromecast to use the new interface. Also fixed a crash
in FIDL interface handler.

Bug: 873676
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ib0f9963fb7b39033bb89a0945a4b8eb5616594cc
Reviewed-on: https://chromium-review.googlesource.com/1175240
Reviewed-by: Xiaohan Wang <xhwang@chromium.org>
Reviewed-by: Kenneth MacKay <kmackay@chromium.org>
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583789}
Former-commit-id: 5d123b36a9ba8f4b7b56175baf8acc173644f0a5