media/audio/fuchsia/audio_output_stream_fuchsia.cc
@@ -13,6 +13,11 @@
 
 namespace media {
 
+// Current AudioOut implementation allows only one buffer with id=0.
+// TODO(sergeyu): Replace with an incrementing buffer id once AddPayloadBuffer()
+// and RemovePayloadBuffer() are implemented properly in AudioOut.
+const uint32_t kBufferId = 0;
+
 AudioOutputStreamFuchsia::AudioOutputStreamFuchsia(
     AudioManagerFuchsia* manager,
     const AudioParameters& parameters)
@@ -22,36 +27,36 @@ AudioOutputStreamFuchsia::AudioOutputStreamFuchsia(
 
 AudioOutputStreamFuchsia::~AudioOutputStreamFuchsia() {
   // Close() must be called first.
-  DCHECK(!audio_renderer_);
+  DCHECK(!audio_out_);
 }
 
 bool AudioOutputStreamFuchsia::Open() {
-  DCHECK(!audio_renderer_);
+  DCHECK(!audio_out_);
 
-  // Connect |audio_renderer_| to the audio service.
+  // Connect |audio_out_| to the audio service.
   fuchsia::media::AudioPtr audio_server =
       base::fuchsia::ComponentContext::GetDefault()
           ->ConnectToService<fuchsia::media::Audio>();
-  audio_server->CreateAudioRenderer2(audio_renderer_.NewRequest());
-  audio_renderer_.set_error_handler(
+  audio_server->CreateAudioOut(audio_out_.NewRequest());
+  audio_out_.set_error_handler(
       fit::bind_member(this, &AudioOutputStreamFuchsia::OnRendererError));
 
-  // Inform the |audio_renderer_| of the format required by the caller.
+  // Inform the |audio_out_| of the format required by the caller.
   fuchsia::media::AudioStreamType format;
   format.sample_format = fuchsia::media::AudioSampleFormat::FLOAT;
   format.channels = parameters_.channels();
   format.frames_per_second = parameters_.sample_rate();
-  audio_renderer_->SetPcmStreamType(std::move(format));
+  audio_out_->SetPcmStreamType(std::move(format));
 
   // Use number of samples to specify media position.
-  audio_renderer_->SetPtsUnits(parameters_.sample_rate(), 1);
+  audio_out_->SetPtsUnits(parameters_.sample_rate(), 1);
 
   // Setup OnMinLeadTimeChanged event listener. This event is used to get
   // |min_lead_time_|, which indicates how far ahead audio samples need to be
   // sent to the renderer.
-  audio_renderer_.events().OnMinLeadTimeChanged =
+  audio_out_.events().OnMinLeadTimeChanged =
       fit::bind_member(this, &AudioOutputStreamFuchsia::OnMinLeadTimeChanged);
-  audio_renderer_->EnableMinLeadTimeEvents(true);
+  audio_out_->EnableMinLeadTimeEvents(true);
 
   // The renderer may fail initialization asynchronously, which is handled in
   // OnRendererError().
@@ -70,7 +75,7 @@ void AudioOutputStreamFuchsia::Start(AudioSourceCallback* callback) {
 void AudioOutputStreamFuchsia::Stop() {
   callback_ = nullptr;
   reference_time_ = base::TimeTicks();
-  audio_renderer_->FlushNoReply();
+  audio_out_->PauseNoReply();
   timer_.Stop();
 }
 
@@ -85,7 +90,7 @@ void AudioOutputStreamFuchsia::GetVolume(double* volume) {
 
 void AudioOutputStreamFuchsia::Close() {
   Stop();
-  audio_renderer_.Unbind();
+  audio_out_.Unbind();
 
   // Signal to the manager that we're closed and can be removed. This should be
   // the last call in the function as it deletes |this|.
@@ -119,8 +124,8 @@ bool AudioOutputStreamFuchsia::InitializePayloadBuffer() {
   }
 
   payload_buffer_pos_ = 0;
-  audio_renderer_->SetPayloadBuffer(
-      zx::vmo(payload_buffer_.handle().Duplicate().GetHandle()));
+  audio_out_->AddPayloadBuffer(
+      kBufferId, zx::vmo(payload_buffer_.handle().Duplicate().GetHandle()));
 
   return true;
 }
@@ -140,18 +145,23 @@ void AudioOutputStreamFuchsia::OnMinLeadTimeChanged(int64_t min_lead_time) {
 }
 
 void AudioOutputStreamFuchsia::OnRendererError() {
-  LOG(WARNING) << "AudioRenderer has failed.";
-  Stop();
-  callback_->OnError();
+  LOG(WARNING) << "AudioOut has failed.";
+  ReportError();
+}
+
+void AudioOutputStreamFuchsia::ReportError() {
+  reference_time_ = base::TimeTicks();
+  timer_.Stop();
+  if (callback_)
+    callback_->OnError();
 }
 
 void AudioOutputStreamFuchsia::PumpSamples() {
-  DCHECK(audio_renderer_);
+  DCHECK(audio_out_);
 
   // Allocate payload buffer if necessary.
   if (!payload_buffer_.mapped_size() && !InitializePayloadBuffer()) {
-    Stop();
-    callback_->OnError();
+    ReportError();
     return;
   }
 
@@ -186,20 +196,21 @@ void AudioOutputStreamFuchsia::PumpSamples() {
           reinterpret_cast<uint8_t*>(payload_buffer_.memory()) +
           payload_buffer_pos_));
 
-  fuchsia::media::AudioPacket packet;
-  packet.timestamp = stream_position_samples_;
+  fuchsia::media::StreamPacket packet;
+  packet.pts = stream_position_samples_;
+  packet.payload_buffer_id = kBufferId;
   packet.payload_offset = payload_buffer_pos_;
   packet.payload_size = packet_size;
   packet.flags = 0;
 
-  audio_renderer_->SendPacketNoReply(std::move(packet));
+  audio_out_->SendPacketNoReply(std::move(packet));
 
   stream_position_samples_ += frames_filled;
   payload_buffer_pos_ =
       (payload_buffer_pos_ + packet_size) % payload_buffer_.mapped_size();
 
   if (reference_time_.is_null()) {
-    audio_renderer_->Play(
+    audio_out_->Play(
         fuchsia::media::NO_TIMESTAMP, stream_position_samples_ - frames_filled,
         [this](int64_t reference_time, int64_t media_time) {
           if (!callback_)
