media/audio/audio_output_unittest.cc
@@ -98,13 +98,7 @@ TEST_F(AudioOutputTest, StopTwice) {
 }
 
 // This test produces actual audio for .25 seconds on the default device.
-#if defined(OS_FUCHSIA)
-// TODO(https://crbug.com/873676): Test flakes started when SDK rolled.
-#define MAYBE_Play200HzTone DISABLED_Play200HzTone
-#else
-#define MAYBE_Play200HzTone Play200HzTone
-#endif
-TEST_F(AudioOutputTest, MAYBE_Play200HzTone) {
+TEST_F(AudioOutputTest, Play200HzTone) {
   ABORT_AUDIO_TEST_IF_NOT(audio_manager_device_info_->HasAudioOutputDevices());
 
   stream_params_ =
